--- a/Papers/2024.04_LLaMA-VITS1/2024.04_LLaMA-VITS.md
+++ b/Papers/2024.04_LLaMA-VITS1/2024.04_LLaMA-VITS.md
@@ -33,8 +33,8 @@ Demo:
 > Notably, in *Text-To-Speech (TTS)* systems, the integration of **BERT** for semantic token generation has underscored the importance of semantic content in producing coherent speech outputs.
 > Despite this, the specific utility of *LLMs* in enhancing TTS synthesis remains considerably limited.
 > This research introduces an innovative approach, ==Llama-VITS==, which enhances TTS synthesis by enriching the semantic content of text using LLM.
-> ==Llama-VITS== integrates semantic embeddings from [Llama2]() with the [VITS model](../2021.06_VITS/2021.06_VITS.md), a leading end-to-end TTS framework.
-> By leveraging [Llama2]() for the primary speech synthesis process, our experiments demonstrate that ==Llama-VITS== matches the naturalness of the [original VITS](../2021.06_VITS/2021.06_VITS.md) (**ORI-VITS**) and those incorporate **BERT** (**BERT-VITS**), on the *LJSpeech* dataset, a substantial collection of neutral, clear speech.
+> ==Llama-VITS== integrates semantic embeddings from [LLaMA2]() with the [VITS model](../2021.06_VITS/2021.06_VITS.md), a leading end-to-end TTS framework.
+> By leveraging [LLaMA2]() for the primary speech synthesis process, our experiments demonstrate that ==Llama-VITS== matches the naturalness of the [original VITS](../2021.06_VITS/2021.06_VITS.md) (**ORI-VITS**) and those incorporate **BERT** (**BERT-VITS**), on the *LJSpeech* dataset, a substantial collection of neutral, clear speech.
 > Moreover, our method significantly enhances emotive expressiveness on the *EmoV_DB_bea_sem* dataset, a curated selection of emotionally consistent speech from the *EmoV_DB* dataset, highlighting its potential to generate emotive speech.
 
 ## 1.Introduction
@@ -44,13 +44,13 @@ Demo:
 > However, **traditional TTS models**, which primarily focus on the acoustic features, often fall short in comprehending the semantic and emotional information embedded within the text.
 > With the significant advancements in *Natural Language Processing (NLP)* technologies, particularly through *Language Models (LMs)* such as **BERT** (Devlin et al., 2019) and **GPT** (Radford et al., 2018; Brown et al., 2020), which have demonstrated formidable capabilities in understanding and generating natural language, researchers have proposed various **BERT-based TTS models** (Mukherjee et al., 2022; Abbas et al., 2022; Li et al., 2023; Guo et al., 2022) to improve the expressiveness of synthesized speech.
 > Nonetheless, the effectiveness and flexibility of **BERT-based TTS models** in diverse applications are limited due to the smaller parameter size of **BERT models** and the necessity for designing specific fine-tuning tasks to enhance their capabilities.
-> On the other hand, **Large-scale Language Models (LLMs)**, such as **Llama2** (Touvron et al., 2023), not only require decreasing computational re sources and achieve higher levels of text generation but also possess excellent zero-shot learning capabilities.
+> On the other hand, **Large-scale Language Models (LLMs)**, such as **LLaMA2** (Touvron et al., 2023), not only require decreasing computational re sources and achieve higher levels of text generation but also possess excellent zero-shot learning capabilities.
 > Moreover, they can achieve improvements comparable to fine-tuning by adjusting only a minimal number of parameters through prompt tuning (Liu et al., 2022; Tu et al., 2022).
 > However, the potential of these LLMs for TTS tasks has not been fully explored.
-> In light of this context, we introduce ==Llama-VITS==, a model that leverages semantic representations extracted from **Llama2** on top of a state-of-the-art TTS model, [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), enabling the generated speech to retain acoustic information while understanding and expressing semantics and emotions.
+> In light of this context, we introduce ==Llama-VITS==, a model that leverages semantic representations extracted from **LLaMA2** on top of a state-of-the-art TTS model, [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), enabling the generated speech to retain acoustic information while understanding and expressing semantics and emotions.
 > Through comprehensive objective and subjective evaluations, ==Llama-VITS== has been verified to surpass TTS baselines without semantic input or those integrated with BERT.
 > The main contributions encapsulate: 
-> - We propose **Llama-VITS model** that utilizes the semantic understanding and expression capabilities of Llama2, offering equal or superior acoustic performance compared to baseline models, along with a significantly enhanced ability to understand and express semantics and emotions.
+> - We propose **Llama-VITS model** that utilizes the semantic understanding and expression capabilities of LLaMA2, offering equal or superior acoustic performance compared to baseline models, along with a significantly enhanced ability to understand and express semantics and emotions.
 > - Through empirical analysis, we demonstrate that global tokens in ==Llama-VITS== provide more significant improvements than sequential to kens, contrasting with observations in **BERT-based TTS models**.
 > - We quantitatively verified our findings using both subjective and objective metrics.
 > Our code, models, audio demos, and the filtered single female speaker emotional dataset *EmoV_DB_bea_sem* are available at https://github.com/xincanfeng/vitsgpt.git.
@@ -126,76 +126,82 @@ Demo:
 > However, due to the inaccessibility of **ChatGPT** to the public, the re searchers resort to processing **ChatGPT**’s outputs with **BERT** to extract embeddings.
 > This approach essentially positions **ChatGPT** as an alternative to manual annotation, yet it does not delve into investigating **ChatGPT**’s internal representations and their potential impact on speech-related tasks.
 
-> In our study, we selected **Llama2**, a **GPT-like LM**, for integration into our TTS system, motivated by its technological advancements and potential for di verse applications.
-> **Llama2** stands out as one of the largest publicly accessible **LMs**, rivaling proprietary models such as **GPT3.5** (OpenAI et al., 2024) and **PaLM** (540B) (Chowdhery et al., 2022), and sur passes other open-source alternatives like **MPT** and **Falcon** (Almazrouei et al., 2023) in benchmark evaluations.
-> Additionally, the novel architecture of **Llama2** not only ensures enhanced security but also facilitates the extension of various down stream tasks (Touvron et al., 2023).
+> In our study, we selected **LLaMA2**, a **GPT-like LM**, for integration into our TTS system, motivated by its technological advancements and potential for di verse applications.
+> **LLaMA2** stands out as one of the largest publicly accessible **LMs**, rivaling proprietary models such as **GPT3.5** (OpenAI et al., 2024) and **PaLM** (540B) (Chowdhery et al., 2022), and sur passes other open-source alternatives like **MPT** and **Falcon** (Almazrouei et al., 2023) in benchmark evaluations.
+> Additionally, the novel architecture of **LLaMA2** not only ensures enhanced security but also facilitates the extension of various down stream tasks (Touvron et al., 2023).
 
-> Related research that employs **Llama2** in speech and other multimodal tasks (Radhakrishnan et al., 2023; Zhang et al., 2023), coupled with the ongoing efforts to reduce computing costs associated with Llama2, underscores the model’s significant research interest and its promising prospects in multimodal applications.
+> Related research that employs **LLaMA2** in speech and other multimodal tasks (Radhakrishnan et al., 2023; Zhang et al., 2023), coupled with the ongoing efforts to reduce computing costs associated with LLaMA2, underscores the model’s significant research interest and its promising prospects in multimodal applications.
 
 ## 3.Methodology
 
 ![](2024.04_Llama-VITS_FIG01.png)
 
 > We propose leveraging semantic embeddings de rived from a **GPT-like LM** to improve TTS synthesis.
-> In our work, **Llama2** is employed as the **GPT-like model**, as elaborated in Sec.2.3, and VITS is utilized as the **TTS model** for generating audio from phoneme embeddings, as detailed in Sec.2.1.
-> In essence, we extract semantic embeddings $E_{s}$ from the final hidden layer of **Llama2** and integrate them with the original acoustic text embeddings $E_{a}$ of [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), forming enhanced text embeddings $E_{as}$ for speech synthesis.
+> In our work, **LLaMA2** is employed as the **GPT-like model**, as elaborated in Sec.2.3, and [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) is utilized as the **TTS model** for generating audio from phoneme embeddings, as detailed in Sec.2.1.
+> In essence, we extract semantic embeddings $E_{s}$ from the final hidden layer of **LLaMA2** and integrate them with the original acoustic text embeddings $E_{a}$ of [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), forming enhanced text embeddings $E_{as}$ for speech synthesis.
 > Specifically, either a global token or a sequence of tokens is used to encapsulate the semantic attributes of an input sentence for varying objectives.
 > The distinctions between these two token types are further explicated in Sec.3.1.
 
-### 3.1.Semantic Embeddings Derived from Llama2
+### 3.1.Semantic Embeddings Derived from LLaMA2
 
-> For each input sentence $s$, we extract information from the final hidden layer before the output of **Llama2**.
+> For each input sentence $s$, we extract information from the final hidden layer before the output of **LLaMA2**.
 > Different strategies are employed to cre ate various tokens that serve as the semantic em bedding for the sentence.
 
-> Let $E_{s}$ denote the semantic embedding of sentence $s$, and $H_{Llama}^F(s)$ represent the output of the **Llama2 model** for sentence $s$ at the final hidden layer $F$.
+> Let $E_{s}$ denote the semantic embedding of sentence $s$, and $H_{Llama}^F(s)$ represent the output of the **LLaMA2 model** for sentence $s$ at the final hidden layer $F$.
 > Therefore, $E_{s}$ can be expressed as: 
-> $$
->   E_{s}=  H_{Llama}^F(s)\tag{1}
-> $$ 
-> 
-> Here, $H_{Llama}^F(s)$ is a vector that encapsulates the semantic representation of sentence $s$ after pro cessing through all layers of the Llama2, culminating in the final layer.
+
+$$
+    E_{s}=  H_{Llama}^F(s)\tag{1}
+$$ 
+
+> Here, $H_{Llama}^F(s)$ is a vector that encapsulates the semantic representation of sentence $s$ after pro cessing through all layers of the LLaMA2, culminating in the final layer.
 
 #### Formulation for Global Tokens
 
 > We explored five types of global tokens to represent the over arching semantic features of an input sentence, namely `[AVE]`, `[PCA]`, `[LAST]`, `[EIS_Word]`, and `[EIS_Sentence]`, with each strategy employing a single token.
 
 > In the `[AVE]` strategy, the semantic token is de rived by calculating the average of all tokens’ out put vectors for sentence $s$, formulated as: 
-> $$
-> E_{s}^{AVE}= \dfrac{1}{n}\sum_{i=1}^n H_{Llama}^F(s,i)\tag{2} 
-> $$
-> 
-> Here, $E_{s}^{AVE}$ denotes the semantic token obtained using the `[AVE]` strategy, and $H_{Llama}^F(s,i)$ represents the output of the $i$ th token of sentence $s$ at the final hidden layer $F$ of Llama2, with $s$ comprising $n$ tokens.
+
+$$
+    E_{s}^{AVE}= \dfrac{1}{n}\sum_{i=1}^n H_{Llama}^F(s,i)\tag{2} 
+$$
+ 
+> Here, $E_{s}^{AVE}$ denotes the semantic token obtained using the `[AVE]` strategy, and $H_{Llama}^F(s,i)$ represents the output of the $i$ th token of sentence $s$ at the final hidden layer $F$ of LLaMA2, with $s$ comprising $n$ tokens.
 
 > For the `[PCA]` strategy, we apply Principal Component Analysis to the output vectors of sentence sto extract principal components and rescale the mean of the PCA results according to the original data’s value range.
 > This rescaling ensures that the PCA-processed data maintains a scale consistent with the original data, preserving the relative importance of semantic information numerically.
 > Formulated as: 
-> $$
-> E_{s}^{PCA}= \text{PCArescale}(H_{Llama}^F(s)) \tag{3}
-> $$
+
+$$
+    E_{s}^{PCA}= \text{PCArescale}(H_{Llama}^F(s)) \tag{3}
+$$
 
 > In the `[LAST]` strategy, the semantic token is obtained by selecting the last token from the output vector of sentence s, as shown in the formula: 
-> $$
->   E_{s}^{LAST}= H_{Llama}^F(s, n)\tag{4} 
-> $$
-> 
-> where $H_{Llama}^F(s, n)$ refers to the representation of the last token of sentence $s$ after processing through all layers of **Llama2** at the final layer.
 
-> In the `[EIS_Word]` and `[EIS_Sentence]` strategies, unlike the above approaches that utilize the sentence itself for representation, we derive the semantic representation of sentence $s$ based on Llama2’s comprehension $u$.
-> Adapted from Saito et al. (2023)’s practice, we employ prompts as illustrated in 2a and 2b, respectively, to obtain Llama2’s understanding of sentence $s$ in terms of Emotion, Intention, and speaking Style, denoted as $u$, and calculate the average of this understanding’s representation to serve as the semantic embedding.
+$$
+    E_{s}^{LAST}= H_{Llama}^F(s, n)\tag{4} 
+$$
 
-> In the `[EIS_Word]` strategy, **Llama2** is prompted to describe Emotion, Intention, and speaking Style with three separate words, resulting in the following formula for the final semantic token: 
-> $$
-> E_{s}^{\text{EISWord}} = \dfrac{1}{m} [\sum_{i} H_{Llama}^{F}(u_E, i) + \sum_j H_{Llama}^{F}(u_I, j) +\sum_k H_{Llama}^{F}(u_S, k)] \tag{5} 
-> $$
-> 
-> where $u_E$, $u_I$, $u_S$ are the representations of Llama2’s output expressing the sentence’s Emotion, Intention, and speaking Style at the final hid den layer, respectively, with $i$, $j$, $k$ indicating the tokens of each output word, and m being the total number of these tokens.
+> where $H_{Llama}^F(s, n)$ refers to the representation of the last token of sentence $s$ after processing through all layers of **LLaMA2** at the final layer.
 
-> In the `[EIS_Sentence]` strategy, **Llama2** is guided to describe its understanding of the input sentence’s Emotion, Intention, and speaking Style with an easy-to-understand sentence, leading to the fol lowing formula for the final semantic token: 
-> $$
-> E_s^{\text{EISSentence}} = \dfrac{1}{m}\sum_{i=1}^m H_{Llama}^{F}(u_{EIS}, i)\tag{6} 
-> $$
-> 
-> where $u_{EIS}$ is the representation of Llama2’s output expressing the understanding of the original sentence at the final hidden layer, and $m$ is the total number of tokens in this sentence representation.
+> In the `[EIS_Word]` and `[EIS_Sentence]` strategies, unlike the above approaches that utilize the sentence itself for representation, we derive the semantic representation of sentence $s$ based on LLaMA2’s comprehension $u$.
+> Adapted from Saito et al. (2023)’s practice, we employ prompts as illustrated in 2a and 2b, respectively, to obtain LLaMA2’s understanding of sentence $s$ in terms of Emotion, Intention, and speaking Style, denoted as $u$, and calculate the average of this understanding’s representation to serve as the semantic embedding.
+
+> In the `[EIS_Word]` strategy, **LLaMA2** is prompted to describe Emotion, Intention, and speaking Style with three separate words, resulting in the following formula for the final semantic token: 
+
+$$
+    E_{s}^{\text{EISWord}} = \dfrac{1}{m} [\sum_{i} H_{Llama}^{F}(u_E, i) + \sum_j H_{Llama}^{F}(u_I, j) +\sum_k H_{Llama}^{F}(u_S, k)] \tag{5} 
+$$
+
+> where $u_E$, $u_I$, $u_S$ are the representations of LLaMA2’s output expressing the sentence’s Emotion, Intention, and speaking Style at the final hid den layer, respectively, with $i$, $j$, $k$ indicating the tokens of each output word, and m being the total number of these tokens.
+
+> In the `[EIS_Sentence]` strategy, **LLaMA2** is guided to describe its understanding of the input sentence’s Emotion, Intention, and speaking Style with an easy-to-understand sentence, leading to the fol lowing formula for the final semantic token: 
+
+$$
+    E_s^{\text{EISSentence}} = \dfrac{1}{m}\sum_{i=1}^m H_{Llama}^{F}(u_{EIS}, i)\tag{6} 
+$$
+ 
+> where $u_{EIS}$ is the representation of LLaMA2’s output expressing the understanding of the original sentence at the final hidden layer, and $m$ is the total number of tokens in this sentence representation.
 
 #### Formulation for Sequential Tokens
 
@@ -203,47 +209,52 @@ Demo:
 > Unlike the global token approaches, sequential tokens strategies encompass representations based on either text or phonemes, aiming to better align with the TTS model’s potential em phasis on acoustic features.
 > The mathematical representations for these two strategies are as follows: 
 > Under the `[TEX]` strategy, we directly employ all tokens from the textual form of sentence $s$ to represent its semantic information.
-> If the output of sentence $s$ at the final hidden layer $F$ of **Llama2** consists of $n$ tokens, then the semantic token $T_{s}^{TEX}$ is represented as a sequence: 
-> $$
-> E_s^{TEX}= \{H_{Llama}^F(s,1), H_{Llama}^F(s, 2),\cdots, H_{Llama}^F(s, n)\} \tag{7} 
-> $$
-> 
+> If the output of sentence $s$ at the final hidden layer $F$ of **LLaMA2** consists of $n$ tokens, then the semantic token $T_{s}^{TEX}$ is represented as a sequence: 
+
+$$
+    E_s^{TEX}= \{H_{Llama}^F(s,1), H_{Llama}^F(s, 2),\cdots, H_{Llama}^F(s, n)\} \tag{7} 
+$$
+ 
 > In the `[PHO]` strategy, we consider the complete set of tokens from the phonemic form.
 > Here, $s_{pho}$ denotes the phonemic representation of sentence $s$.
-> If the output of $s_{pho}$ at the final hidden layerF of **Llama2** comprises $m$ tokens, then the semantic token $T_{s}^{PHO}$ is represented as a sequence: 
-> $$
-> E_{s}^{PHO}=\{H_{Llama}^F(s_{pho}, 1),H_{Llama}^F(s_{pho}, 2),\cdots,H_{Llama}^F(s_{pho}, m)\}\tag{8} 
-> $$
-> 
-> In both strategies, $H_{Llama}^F(s, i)$ and $H_{Llama}^F(s_{pho}, i)$ respectively represent the outputs of the $i$ th token of sentence $s$ in its textual and phonemic forms at the final hidden layerFof Llama2.
+> If the output of $s_{pho}$ at the final hidden layerF of **LLaMA2** comprises $m$ tokens, then the semantic token $T_{s}^{PHO}$ is represented as a sequence: 
+
+$$
+    E_{s}^{PHO}=\{H_{Llama}^F(s_{pho}, 1),H_{Llama}^F(s_{pho}, 2),\cdots,H_{Llama}^F(s_{pho}, m)\}\tag{8} 
+$$
+ 
+> In both strategies, $H_{Llama}^F(s, i)$ and $H_{Llama}^F(s_{pho}, i)$ respectively represent the outputs of the $i$ th token of sentence $s$ in its textual and phonemic forms at the final hidden layerFof LLaMA2.
 > This representation allows the TTS model to leverage the complete semantic information of a sentence, whether based on text or phonemes.
 
 ### 3.2.Fusing Semantic Embeddings with Acoustic Embeddings
 
-> To align the dimensions of semantic embedding extracted from Llama2, denoted as $E_{s}$, with the acoustic embeddings from VITS, denoted as $E_{a}$, we employ a linear projection.
-> The original dimension of $E_{s}$, $d_{Llama}$, is projected to match the dimension of VITS acoustic embedding, $d_{VITS}$, using a linear transformation matrix $W$ of dimensions $d_{VITS}\times d_{Llama}$.
+> To align the dimensions of semantic embedding extracted from LLaMA2, denoted as $E_{s}$, with the acoustic embeddings from [VITS (2021)](../2021.06_VITS/2021.06_VITS.md), denoted as $E_{a}$, we employ a linear projection.
+> The original dimension of $E_{s}$, $d_{Llama}$, is projected to match the dimension of [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) acoustic embedding, $d_{VITS}$, using a linear transformation matrix $W$ of dimensions $d_{VITS}\times d_{Llama}$.
 > The projected semantic embedding, $E_s'$, is calculated as follows: 
-> $$
-> E_s'= W \cdot E_{s} \tag{9} 
-> $$
-> 
+
+$$
+    E_s'= W \cdot E_{s} \tag{9} 
+$$ 
 
 #### Fusing Global Embedding with Acoustic Embedding
 
-> To obtain an embedding $E_{as}$ that integrates both semantic and acoustic information, for global tokens, we simply add the dimensionally unified global embedding to VITS’s acoustic em bedding, as shown in the equation: 
-> $$
-> E_{as} = E_{a} + E_s′\tag{10}
-> $$ 
+> To obtain an embedding $E_{as}$ that integrates both semantic and acoustic information, for global tokens, we simply add the dimensionally unified global embedding to [VITS (2021)](../2021.06_VITS/2021.06_VITS.md)’s acoustic em bedding, as shown in the equation: 
+
+$$
+    E_{as} = E_{a} + E_s′\tag{10}
+$$ 
 
 #### Fusing Sequential Embeddings to Enhance Text Embeddings
 
-> We utilize the Scaled Dot Product Attention mechanism to merge sequential embeddings with VITS’s original acoustic embedding to gain enhanced embedding $E_{as}$ , which can be described by the following mathematical formulas: 
+> We utilize the Scaled Dot Product Attention mechanism to merge sequential embeddings with [VITS (2021)](../2021.06_VITS/2021.06_VITS.md)’s original acoustic embedding to gain enhanced embedding $E_{as}$ , which can be described by the following mathematical formulas: 
 > First, calculate the attention scores $A$:
-> $$
-> A = \dfrac{q\cdot k^{\mathsf{T}}}{\gamma} \tag{11}
-> $$
-> where $q$ is the acoustic embedding $E_{a}$ in VITS with dimensions $[b, t, d]$; 
-> $k$ and $v$ denotes the semantic embedding $E_s'$ from Llama2, also with dimensions $[b, t, d]$; 
+
+$$
+    A = \dfrac{q\cdot k^{\mathsf{T}}}{\gamma} \tag{11}
+$$
+
+> where $q$ is the acoustic embedding $E_{a}$ in [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) with dimensions $[b, t, d]$; 
+> $k$ and $v$ denotes the semantic embedding $E_s'$ from LLaMA2, also with dimensions $[b, t, d]$; 
 > $b$ is the batch size,tis the sequence length, and $d$ is the embedding dimension;
 > $\gamma$ is temperature for scaling.
 > $k^{\mathsf{T}}$ denotes the transpose of $k$, transforming $k$ from $[b, t, d]$ to $[b, d, t]$ for matrix multiplication.
@@ -252,35 +263,37 @@ Demo:
 > If a source mask or target mask is present, a masking operation is applied, setting the attention scores at masked positions to a very low value (e.g.,−6e4) to nearly eliminate their weight contribution in the subsequent softmax step.
 
 > Next, apply the softmax function and dropout to the attention scores, obtaining the final attention weights $W_{attn}$: 
-> $$
-> W_{attn}= \text{Dropout}(\text{Softmax}(A))\tag{12} 
-> $$
-> 
+
+$$
+    W_{attn}= \text{Dropout}(\text{Softmax}(A))\tag{12} 
+$$
+ 
 > Finally, the output $E_{as}$ is calculated by weighting $v$ with the attention weights: 
-> $$
-> E_{as} = W_{attn}\cdot v
-> $$ 
-> 
+
+$$
+    E_{as} = W_{attn}\cdot v
+$$ 
+
 > The output $E_{as}$ , viewed as text embedding fused with semantic information, has dimensions $[b, t, d]$ that match those of $q$.
 
 ## 4.Experiments
 
 ### 4.1.Experimental Settings
 
-> We propose ==Llama-VITS== which uses semantic to kens derived from **Llama2** to enhance acoustic embedding in VITS for better TTS performance.
+> We propose ==Llama-VITS== which uses semantic to kens derived from **LLaMA2** to enhance acoustic embedding in [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) for better TTS performance.
 > To show the effectiveness of our method, we experimented with two baseline models.
-> In the **ORI-VITS** baseline, we use the original VITS without external semantic information.
+> In the **ORI-VITS** baseline, we use the original [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) without external semantic information.
 > In the **BERT-VITS** baseline, we extract various semantic tokens according to for mer research introduced in Section § 2.2.
 > Specifically, we use the `[CLS]` token of **BERT** as the global token.
 > To form the baseline of the sequential token in **BERT**, we use all the tokens in the sentence trained by text or phoneme, named `[BERT_TEX]` and `[BERT_PHO]`, respectively.
-> In our proposed ==Llama-VITS==, we derive global token `[AVE]`, `[LAST]`, `[PCA]`, `[EIS_Word]`, and `[EIS_Sentence]`, and sequential tokens `[TEX]` and `[PHO]` from Llama2, cor responding to those in **BERT-VITS**.
-> We use **Llama2** (13b) to generate semantic embeddings of dimension 5120.
+> In our proposed ==Llama-VITS==, we derive global token `[AVE]`, `[LAST]`, `[PCA]`, `[EIS_Word]`, and `[EIS_Sentence]`, and sequential tokens `[TEX]` and `[PHO]` from LLaMA2, cor responding to those in **BERT-VITS**.
+> We use **LLaMA2** (13b) to generate semantic embeddings of dimension 5120.
 > `[CLS]` and `[BERT_TEX]` tokens are extracted from **BERT-base-uncased model** which has a parameter size of 110M that generates token embedding of 768 dimensions.
 > `[BERT_PHO]` token is extracted from **BERT-x-phone-base model** whose parameter size is 88M to generate token embedding of 768 dimensions.
 
 #### Global Token Extraction
 
-> In our proposed ==Llama-VITS==, global strategy `[LAST]` only uses the last to ken in the final hidden layer of **Llama2** for each sentence.
+> In our proposed ==Llama-VITS==, global strategy `[LAST]` only uses the last to ken in the final hidden layer of **LLaMA2** for each sentence.
 > `[AVE]` uses the average of all tokens for each sentence.
 > `[PCA]` uses the concatenation of all tokens whose dimension was reduced by Principal Component Analysis (PCA).
 > `[EIS_Word]` and `[EIS_Sentence]` use the average of tokens for an answer, which is formed in three words or a sentence by prompts shown in Fig.02, to describe the Emotion, Intention, and speaking Style of the transcript.
@@ -290,26 +303,26 @@ Demo:
 
 #### Sequential Token Extraction
 
-> In our proposed ==Llama-VITS==, sequential strategy `[TEX]` concatenates the sequence of tokens in a sentence generated by **Llama2** using text input.
-> `[PHO]` concatenates the sequence of tokens of a sentence generated by **Llama2** using phonemic input.
+> In our proposed ==Llama-VITS==, sequential strategy `[TEX]` concatenates the sequence of tokens in a sentence generated by **LLaMA2** using text input.
+> `[PHO]` concatenates the sequence of tokens of a sentence generated by **LLaMA2** using phonemic input.
 > In the baseline **BERT-VITS**, sequential strategy `[BERT_TEX]` concatenates all the tokens in a sentence extracted from **BERT-base-uncased model**.
 > `[BERT_PHO]` concatenates all the tokens in a sentence extracted from **BERT-x-phone-base model**.
 
 #### Datasets
 
 > We utilized full LJSpeech, 1-hour LJSpeech, and EmoV_DB_bea_sem dataset for experimental verification.
-> LJSpeech4comprises 24 hours recorded of English speech by sin gle female speaker, where we evaluate how the embeddings extracted from **Llama2** can help improve the speech naturalness.Besides full LJSpeech dataset, we also randomly filtered 1 hour LJSpeech which contains only 1-hour records as an ablation study to show how dataset size influences.
+> LJSpeech4comprises 24 hours recorded of English speech by sin gle female speaker, where we evaluate how the embeddings extracted from **LLaMA2** can help improve the speech naturalness.Besides full LJSpeech dataset, we also randomly filtered 1 hour LJSpeech which contains only 1-hour records as an ablation study to show how dataset size influences.
 > EmoV_DB5(Adigwe et al., 2018) is a database of emotional speech that contains data for male and female actors in English and French.
 > EmoV_DB covers 5 emotion classes, amused, an gry, disgusted, neutral, and sleepy.
 > To factor out the effect of different speakers, we filtered the original EmoV_DB dataset into the speech of a specific female English speaker, bea.
-> Then we use **Llama2** to predict the emotion label of the transcript cho sen from the above 5 emotion classes, and select the audio samples which has the same predicted emotion.
+> Then we use **LLaMA2** to predict the emotion label of the transcript cho sen from the above 5 emotion classes, and select the audio samples which has the same predicted emotion.
 > The filtered dataset contains 22.8-min records for training.
-> We named the filtered dataset EmoV_DB_bea_sem and investigated how the semantic embeddings from **Llama2** behave in naturalness and expressiveness on it.
+> We named the filtered dataset EmoV_DB_bea_sem and investigated how the semantic embeddings from **LLaMA2** behave in naturalness and expressiveness on it.
 > Please refer to Appendix A 12 for more dataset statistics.
 
 #### Implementation, Hyper-parameters, Training 
 
-> Our ==Llama-VITS== system was built on the [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) framework using its original implementation, augmented with semantic embeddings de rived from **Llama2** (Touvron et al., 2023) using its original implementation7.
+> Our ==Llama-VITS== system was built on the [VITS (2021)](../2021.06_VITS/2021.06_VITS.md) framework using its original implementation, augmented with semantic embeddings de rived from **LLaMA2** (Touvron et al., 2023) using its original implementation7.
 > For training LJSpeech, we use the public configs in the original implementation of [VITS (2021)](../2021.06_VITS/2021.06_VITS.md).
 > For EmoV_DB_bea_sem, we use the same config as LJSpeech but changed batch size from 64 to 16 since this dataset is much smaller.
 > Besides implementing our proposed ==Llama-VITS==, we extracted corresponding semantic tokens `[CLS]`, `[BERT_TEX]` from **BERT-uncased-base model** and `[BERT_PHO]` from **BERT** pre-trained on phoneme for comparison.
@@ -375,7 +388,7 @@ Demo:
 
 ### 6.1.GPT-like vs **BERT**-like
 
-> Initial observations from our experiments indicate that, even without any fine-tuning of Llama2, ==Llama-VITS== significantly outperforms both **BERT-VITS** and **ORI-VITS** in terms of emotional expressive ness.
+> Initial observations from our experiments indicate that, even without any fine-tuning of LLaMA2, ==Llama-VITS== significantly outperforms both **BERT-VITS** and **ORI-VITS** in terms of emotional expressive ness.
 > This finding opens up avenues for future research into emotive TTS tasks.
 > Furthermore, a comparison between **BERT-VITS** and ==Llama-VITS== highlights their distinct performance traits.
 > **BERT-VITS**, leveraging deep con textual embeddings, provides profound semantic insights yet encounters challenges in customization and adaptability across a range of TTS tasks.
@@ -395,10 +408,10 @@ Demo:
 
 ## 8.Limitations
 
-> Compared with our baseline which uses different **BERT models**, we only tested our method using [Llama2]().
+> Compared with our baseline which uses different **BERT models**, we only tested our method using [LLaMA2]().
 > As Kenter et al. (2020) indicate for their **BERT-based TTS model**, small **BERT models** work better than big ones, but the parameter size of our proposed **GPT-based TTS** influence is yet stud ied by our research.
 > Although **BERT-based TTS models** are normally finetuned on speech tasks to provide more explicit acoustic information for TTS, we didn’t try designing prompts to generate acoustic features and only studied how general semantic information can help.
 > Our experiments were conducted only on clean datasets with limited size, and the effect on more complex datasets is to be further explored.
-> The integration of [Llama2]()’s embeddings introduces additional computational costs, potentially limiting real-time applications.
+> The integration of [LLaMA2]()’s embeddings introduces additional computational costs, potentially limiting real-time applications.
 
-相比于基线模型使用了不同的 BERT 模型, 我们的方法仅使用了 Llama2.
+相比于基线模型使用了不同的 BERT 模型, 我们的方法仅使用了 LLaMA2.
